Adress code style issues